...
                  </Text>
                  <Controller
                    control={control}
                    name="name"
                    render={({ field: { onChange, onBlur, value } }) => (
                      <TextInput
                        testID="input-name"
                        style={[
                          styles.nameInput,
                          errors.name && styles.nameInputError,
                        ]}
                        value={value}
                        onChangeText={onChange}
...
