...
                Mot de passe oublié ?
              </Link>
            </Text>
          </View>
          <View style={styles.inputContainer}>
            <Button
              text="Se Connecter"
              onPress={handleSubmit}
              isLoading={loading}
            />
          </View>
          <Text style={styles.textLink}>
            Pas encore de compte ?{" "}
...
